refactor: fix architecture issues, JPA bugs, and code quality
**JPA / Data Layer**
- Fix Spring AOP self-call REQUIRES_NEW bug: extract
  finalizeRunIfComplete into ExperimentFinalizationServiceImpl so the
  REQUIRES_NEW transaction is honoured via the proxy
- Fix wrong mappedBy values in ExperimentPartExecution (indicators,
  solutions now point to experimentPartExecution field)
- Rename experimentPart → experimentPartExecution in
  ExperimentPartIndicator and ExperimentPartSolution; update setters
  with bidirectional backref guards
- Remove unsafe single-arg RunId(Long runNo) constructor that produced
  IDs with null experimentId
- Remove manual runCount mutation in Experiment.addRun/removeRun;
  runCount is set once in the constructor
- Eliminate N+1 queries in markPartAs* methods via
  findByIdWithRunAndExperiment (single join-fetch)
- Add findWithRunsByIdAndStatus using left-join-on clause so the
  experiment is always returned regardless of run count
- Add PESSIMISTIC_WRITE lock in finalization to prevent concurrent
  double-finalization

**Service Layer**
- Replace fake ExperimentRun entity assembly in getExperimentRun with
  ExperimentRunView record (immutable projection, no JPA state mutation)
- Simplify deleteExperiment and deleteExperimentRun to rely on
  CascadeType.ALL instead of manual child deletion
- Fix createExperiment: flush executions before building QueueData so
  IDs are available; enqueue tasks only after transaction commits via
  TransactionSynchronization.afterCommit
- Fix CSV escaping: fields containing commas, quotes, or newlines are
  now properly quoted per RFC 4180

**DTOs / Models**
- Convert QueueData to a record (eliminates two-phase mutable
  construction; experimentPartId is now a required constructor arg)
- Add ExperimentRunView record as the view model for getExperimentRun

**Controller / Mapper**
- Fix ExperimentEndpointErrorAdvice URL regex from never-matching
  /experiments/(d+)/(d+)/(d+) to correct
  /experiments/{id}/runs/{